[package]
name = "orm"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2.0.17"
utils = { path = "../utils" }
orm-macros = { path = "../orm-macros" }
chrono = "0.4"
rust_decimal = "1.34"
uuid = { version = "1.10", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "mysql", "sqlite", "chrono" ] }